added player short profiles

--- a/static/index.html
+++ b/static/index.html
@@ -15,6 +15,7 @@
         <a href="/api/discord/login" class="discordButton">Login with discord</a>
       </div>
       <div id="clientShort"></div>
+      <div id="peerShort" style="display:none;"></div>
       <div id="playArea"></div>
       <div id="global_chat" class="global_chat">
         <div class="global_chat_box">
