Added Weather System
Police and Guns are still WIP needed a weather system befor I started some of the other stuff

--- a/static/index.html
+++ b/static/index.html
@@ -14,6 +14,7 @@
       <div id="login" class="login">
         <a href="/api/discord/login" class="discordButton">Login with discord</a>
       </div>
+      <div id="weather"></div>
       <div id="clientShort"></div>
       <div id="peerShort" style="display:none;"></div>
       <div id="playArea"></div>
