Revert "Removed bootstap"
This reverts commit 3ad70aabc41b4e9b26e2c771e222af91172ac1fb.

--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Papika RPG</title>
+		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel="shortcut icon" type="image/png" href="/images/fav.png"/>
 		<meta name=viewport content="width=device-width, initial-scale=1">
